# Wireless_TIS_System

./: readme.md
firmware/: CMakeLists.txt  prj.conf
firmware/boards/: nrf5340dk_nrf5340_cpuapp.overlay
firmware/src/: adc_pwm.c  adc_pwm.h  ble_service.c  ble_service.h  main.c  parameter.h
software/: TIS_System.py
